# grade_conversion_script

./: .gitignore  README.md  __init__.py  __main__.py  attendance_pollev2canvas.py  bootstrap_utils.py  build.py  cmd_opts.py  pyproject.toml  test_all.py
grade_conversion_script/: __main__.py  bootstrap_utils.py  cmd_opts.py
grade_conversion_script/gui/: __init__.py  start_app.py  util.py
grade_conversion_script/gui/base_components/: CollapseTransition.vue  button_dual_label.py  click_stop.py  collapse_transition.py  dual_list_match.py  inner_loading.py  split_panes.py  split_panes_layout.py  splitpane.js  splitpanes.js
grade_conversion_script/gui/flow_components/: UxFlow.py  __init__.py  app_flow.py  pane_header.py  select_input_handler.py  select_output_format.py
grade_conversion_script/gui/flow_components/execute/: __init__.py  execute.py  rubric_match.py  student_alias_match.py  warn_existings.py
grade_conversion_script/gui/flow_components/import_data/: __init__.py  multi_file.py  single_file.py  tab_util.py
grade_conversion_script/gui/flow_components/result/: __init__.py  result_actions.py
grade_conversion_script/gui/flow_components/select_input/: __init__.py  attendance_poll_ev.py  attendance_true_false.py  common.py  select_input_handler.py
grade_conversion_script/gui/flow_components/select_output/: __init__.py  auto_canvas_rubric.py  canvas_enhanced_rubric.py  canvas_gradebook.py  common.py  select_output_format.py
grade_conversion_script/gui/state_components/: FlowStepHolder.py  UxFlow.py  constructor_element.py
grade_conversion_script/input/: __init__.py  attendance_poll_ev.py  attendance_true_false.py  base.py
grade_conversion_script/output/: __init__.py  auto_canvas_rubric.py  base.py  canvas_enhanced_rubric.py  canvas_gradebook.py
grade_conversion_script/util/: AliasRecord.py  EnumAction.py  NameSisIdConverter.py  __init__.py  alias_record.py  custom_types.py  dataclasses.py  funcs.py  tui.py  types.py
input/: __init__.py  attendance_poll_ev.py  base.py
output/: __init__.py  auto_canvas_rubric.py  base.py  canvas_enhanced_rubric.py  canvas_gradebook.py
test/: alias_record_unit_tests.py
util/: AliasRecord.py  NameSisIdConverter.py  __init__.py  funcs.py  tools.py  tui.py  types.py
