[project]
name = "grade_conversion_script"
version = "0.0.2"
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
  'pandas',
  'pandera',
  'colorama',
]

[project.optional-dependencies]
gui = ["nicegui", "pywebview"]
dev = ["pytest", "build"]

[project.urls]
Homepage = "https://github.com/jeffreyalanwang/grade_conversion_script"
Repository = "https://github.com/jeffreyalanwang/grade_conversion_script.git"
"Bug Tracker" = "https://github.com/jeffreyalanwang/grade_conversion_script/issues"

[project.scripts]
grade-convert = "grade_conversion_script.__main__:cli_main"
grade-convert-app = "grade_conversion_script.__main__:gui_main"

[tool.pytest.ini_options]
python_files = "test/*.py"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

[tool.setuptools.packages.find]
include = [
    "grade_conversion_script",
    # top-level packages
    "grade_conversion_script.input", "grade_conversion_script.output",
    "grade_conversion_script.util", "grade_conversion_script.gui",
    # top-level modules
    "grade_conversion_script.bootstrap_utils", "grade_conversion_script.cmd_opts",
    # nested packages
    "grade_conversion_script.gui.base_components*",
    "grade_conversion_script.gui.flow_components*",
    "grade_conversion_script.gui.state_components*",
]
exclude = [".*", "dist*", "*test*", "*build.py"]

[tool.setuptools.package-data]
grade_conversion_script = ["gui/base_components/*.vue", "gui/base_components/*.js"]

[tool.pyright]
# Specify the type checking mode. Options include "off", "basic", "standard", "strict", "recommended", and "all".
typeCheckingMode = "recommended"
# Configure virtual environment settings if applicable.
venvPath = "."
venv = ".venv"
# Override specific diagnostic rules.
reportImplicitStringConcatenation = false
reportInvalidCast = "hint"
